[MSVC] WebResourceLoadStatisticsStore.h is reporting warning C4804: '/': unsafe use of type 'bool' in operation https://bugs.webkit.org/show_bug.cgi?id=204870

Reviewed by Darin Adler.

This patch converts storageAccessGranted to a char since makeString()
does not explicitly accept bool types.

* NetworkProcess/Classifier/WebResourceLoadStatisticsStore.h:
(WebKit::ThirdPartyDataForSpecificFirstParty::toString const):


Canonical link: https://commits.webkit.org/218111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253155 268f45cc-cd09-0410-ab3c-d52691b4dbfc